Don't use selection bounds to paint document marker

If there is no selection, selection bounds may exceed the paint
invalidation rect.

The original reason of using selection bounds to paint document
marker "when the selection and this highlight are on the same word
there are no pieces sticking out" no longer applies because we don't
allow selection and document markers at the same time.

BUG=619633

Review-Url: https://codereview.chromium.org/2065723002
Cr-Commit-Position: refs/heads/master@{#400080}

Former-commit-id: 889581a0249d4ccddcb7d85d3c45e54c2af93a48